--- a/client/ui/layouts/partials/Header.html
+++ b/client/ui/layouts/partials/Header.html
@@ -1,25 +1,299 @@
 <template name="Header">
     <header class="vn-care vn-care-lg">
-        <div class="container">
-            <nav class="navbar navbar-default" role="navigation">
-                <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar navbar-default yamm" role="navigation" id="navbar">
+            <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{pathFor 'HomePage'}}"> <h2> Cây đầu nhỏ </h2> </a>
+                    <a class="navbar-brand home animated bounce" href="#">
+                        <img src="images/logo.png" alt="Obaju logo" class="hidden-xs">
+                        <img src="images/logo-small.png" alt="Obaju logo" class="visible-xs">
+                        <span class="sr-only">Obaju - go to homepage</span>
+                    </a>
+                    <div class="navbar-buttons">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation">
+                            <span class="sr-only">Toggle navigation</span>
+                            <i class="fa fa-align-justify"></i>
+                        </button>
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#search">
+                            <span class="sr-only">Toggle search</span>
+                            <i class="fa fa-search"></i>
+                        </button>
+                        <a class="btn btn-default navbar-toggle" href="#">
+                            <i class="fa fa-shopping-cart"></i>  <span class="hidden-xs">3 items in cart</span>
+                        </a>
+                    </div>
+                </div>
+                <!--/.navbar-header -->
+
+                <div class="navbar-collapse collapse" id="navigation">
+
+                    <ul class="nav navbar-nav navbar-left">
+                        <li class="active"><a href="#">Home</a>
+                        </li>
+                        <li class="dropdown yamm-fw">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Men <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="yamm-content">
+                                        <div class="row">
+                                            <div class="col-sm-3">
+                                                <h5>Clothing</h5>
+                                                <ul>
+                                                    <li><a href="#">T-shirts</a>
+                                                    </li>
+                                                    <li><a href="#">Shirts</a>
+                                                    </li>
+                                                    <li><a href="#">Pants</a>
+                                                    </li>
+                                                    <li><a href="#">Accessories</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Shoes</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Accessories</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Featured</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                </ul>
+                                                <h5>Looks and trends</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /.yamm-content -->
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown yamm-fw">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Ladies <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="yamm-content">
+                                        <div class="row">
+                                            <div class="col-sm-3">
+                                                <h5>Clothing</h5>
+                                                <ul>
+                                                    <li><a href="#">T-shirts</a>
+                                                    </li>
+                                                    <li><a href="#">Shirts</a>
+                                                    </li>
+                                                    <li><a href="#">Pants</a>
+                                                    </li>
+                                                    <li><a href="#">Accessories</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Shoes</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Accessories</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                    <li><a href="#">Casual</a>
+                                                    </li>
+                                                </ul>
+                                                <h5>Looks and trends</h5>
+                                                <ul>
+                                                    <li><a href="#">Trainers</a>
+                                                    </li>
+                                                    <li><a href="#">Sandals</a>
+                                                    </li>
+                                                    <li><a href="#">Hiking shoes</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <div class="banner">
+                                                    <a href="#">
+                                                        <img src="images/banner.jpg" class="img img-responsive" alt="">
+                                                    </a>
+                                                </div>
+                                                <div class="banner">
+                                                    <a href="#">
+                                                        <img src="images/banner2.jpg" class="img img-responsive" alt="">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /.yamm-content -->
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown yamm-fw">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Template <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="yamm-content">
+                                        <div class="row">
+                                            <div class="col-sm-3">
+                                                <h5>Shop</h5>
+                                                <ul>
+                                                    <li><a href="#">Homepage</a>
+                                                    </li>
+                                                    <li><a href="#">Category - sidebar left</a>
+                                                    </li>
+                                                    <li><a href="category-right.html">Category - sidebar right</a>
+                                                    </li>
+                                                    <li><a href="category-full.html">Category - full width</a>
+                                                    </li>
+                                                    <li><a href="detail.html">Product detail</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>User</h5>
+                                                <ul>
+                                                    <li><a href="register.html">Register / login</a>
+                                                    </li>
+                                                    <li><a href="customer-orders.html">Orders history</a>
+                                                    </li>
+                                                    <li><a href="customer-order.html">Order history detail</a>
+                                                    </li>
+                                                    <li><a href="customer-wishlist.html">Wishlist</a>
+                                                    </li>
+                                                    <li><a href="customer-account.html">Customer account / change password</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Order process</h5>
+                                                <ul>
+                                                    <li><a href="basket.html">Shopping cart</a>
+                                                    </li>
+                                                    <li><a href="checkout1.html">Checkout - step 1</a>
+                                                    </li>
+                                                    <li><a href="checkout2.html">Checkout - step 2</a>
+                                                    </li>
+                                                    <li><a href="checkout3.html">Checkout - step 3</a>
+                                                    </li>
+                                                    <li><a href="checkout4.html">Checkout - step 4</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <h5>Pages and blog</h5>
+                                                <ul>
+                                                    <li><a href="blog.html">Blog listing</a>
+                                                    </li>
+                                                    <li><a href="post.html">Blog Post</a>
+                                                    </li>
+                                                    <li><a href="faq.html">FAQ</a>
+                                                    </li>
+                                                    <li><a href="text.html">Text page</a>
+                                                    </li>
+                                                    <li><a href="text-right.html">Text page - right sidebar</a>
+                                                    </li>
+                                                    <li><a href="404.html">404 page</a>
+                                                    </li>
+                                                    <li><a href="contact.html">Contact</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /.yamm-content -->
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+
+                <div class="navbar-buttons">
+                    <div class="navbar-collapse collapse right" id="basket-overview">
+                        <a href="basket.html" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3 items in cart</span></a>
+                    </div>
+                    <!--/.nav-collapse -->
+
+                    <div class="navbar-collapse collapse right" id="search-not-mobile">
+                        <button type="button" class="btn navbar-btn btn-primary" data-toggle="collapse" data-target="#search">
+                            <span class="sr-only">Toggle search</span>
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a href="{{pathFor 'HomePage'}}"><i class="fa fa-home"></i> HOME</a></li>
-                     </ul>
-                </div><!-- /.navbar-collapse -->
-            </nav>
+                <div class="collapse clearfix" id="search">
+                    <form class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <span class="input-group-btn">
+
+                                <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+
+                            </span>
+                        </div>
+                    </form>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+            <!-- /.container -->
         </div>
+        <!-- /#navbar -->
+        <!-- *** NAVBAR END *** -->
     </header> <!--end header-->
 </template>
