--- a/client/ui/layouts/partials/Topbar.html
+++ b/client/ui/layouts/partials/Topbar.html
@@ -1,21 +1,64 @@
 <template name="TopBar">
     <section class="vn-care content top-bar">
-        <div class="col-md-3 pull-right">
-            {{#if currentUser }}
-                <div class="dropdown pull-right">
-                    <a href="#" class="dropdown-toggle username" data-toggle="dropdown">abc<b
-                            class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#" class="logout">Logout</a></li>
+        <div id="top">
+            <div class="container">
+                <div class="col-md-6 offer" data-animate="fadeInDown">
+                    <a href="#" class="btn btn-success btn-sm animated shake">Offer of the day</a>  <a href="#">Get flat 35% off on orders over $50!</a>
+                </div>
+                <div class="col-md-6" data-animate="fadeInDown">
+                    <ul class="menu">
+                        {{#if isLogin}}
+                            <li>
+                            <div class="dropdown">
+                                <a href="#" class="dropdown-toggle username" data-toggle="dropdown">
+                                    Username
+                                    <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="topbar-fix-dropdown" href="#">Profile</a></li>
+                                    <li><a class="topbar-fix-dropdown logout" href="#">Logout</a></li>
+                                </ul>
+                            </div>
+                            </li>
+                        {{else}}
+                            <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a></li>
+                            <li><a href="#">Register</a></li>
+                        {{/if}}
+                        <li><a href="#">Contact</a>
+                        </li>
+                        <li><a href="#">Recently viewed</a>
+                        </li>
                     </ul>
                 </div>
-            {{else}}
-                <div class="pull-right divider"> &nbsp; </div>
-                <a href="{{pathFor 'Login'}}" class="btn btn-sm btn-primary pull-right">Login</a>
-                <div class="pull-right divider"> &nbsp; </div>
-                <a href="{{pathFor 'SignUp'}}" class="btn btn-sm btn-success pull-right">Sign up</a>
-            {{/if}}
+            </div>
+
+            <!--A modal to login quickly-->
+            <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title" id="Login">Customer login</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#" method="post">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="email-modal" placeholder="email">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" id="password-modal" placeholder="password">
+                                </div>
+
+                                <p class="text-center">
+                                    <button class="btn btn-primary"><i class="fa fa-sign-in"></i> Log in</button>
+                                </p>
+                            </form>
+                            <p class="text-center text-muted">Not registered yet?</p>
+                            <p class="text-center text-muted"><a href="#"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to special discounts and much more!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </template>
