--- a/client/ui/layouts/partials/Header.html
+++ b/client/ui/layouts/partials/Header.html
@@ -3,7 +3,7 @@
         <div class="navbar navbar-default yamm" role="navigation" id="navbar">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand home animated bounce" href="#">
+                    <a class="navbar-brand home animated bounce" href="/">
                         <img src="images/logo.png" alt="Obaju logo" class="hidden-xs">
                         <img src="images/logo-small.png" alt="Obaju logo" class="visible-xs">
                         <span class="sr-only">Obaju - go to homepage</span>
@@ -27,7 +27,7 @@
                 <div class="navbar-collapse collapse" id="navigation">
 
                     <ul class="nav navbar-nav navbar-left">
-                        <li class="active"><a href="#">Home</a>
+                        <li class="active"><a href="/">Home</a>
                         </li>
                         <li class="dropdown yamm-fw">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Men <b class="caret"></b></a>
