--- a/client/style/mainStyle.css
+++ b/client/style/mainStyle.css
@@ -6,256 +6,6 @@ body {
     background: #f0f0f0;
 }
 
-/* begin header vn-care */
-header.vn-care {
-    background: #fff;
-    margin-bottom: 15px;
-}
-
-header.vn-care.fix-top {
-    position: fixed;
-    top: 0;
-    z-index: 100;
-    width: 100%;
-}
-
-header.vn-care nav {
-    margin-bottom: 0;
-    border: 0;
-    background-color: inherit;
-}
-
-.navbar-brand {
-    padding: 0;
-}
-
-.navbar-brand > img, a {
-    height: 100%;
-    width: auto;
-}
-
-@media (min-width: 600px) {
-    header.vn-care nav .navbar-ex1-collapse li{
-        margin-bottom: 3px;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li:hover {
-        border-top-style: none;
-        border-right-style: none;
-        border-bottom: 3px solid #e96969;
-        border-left-style: none;
-        margin-bottom: 0;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li.active{
-        border-top-style: none;
-        border-right-style: none;
-        border-bottom: 3px solid #e96969;
-        border-left-style: none;
-        margin-bottom: 0;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li.active a{
-        background: white;
-    }
-
-    header.vn-care nav .navbar-ex1-collapse li:hover i.fa{
-        color: #e96969;
-    }
-
-    .vn-care-lg .navbar-brand {
-        height: 80px;
-    }
-
-    .vn-care-lg .nav > li > a {
-        padding-top: 30px;
-        padding-bottom: 27px;
-    }
-
-    .vn-care-lg .navbar-toggle {
-        padding: 10px;
-        margin: 25px 15px 25px 0;
-    }
-}
-/*end header vn-care*/
-
-/*begin footer vn-care*/
-footer {
-    padding: 10px;
-    background: #2e2e2e;
-    color: #2e2e2e;
-}
-
-.footer-fix {
-    width: 100%;
-    position: absolute;
-    bottom:0;
-}
-/*end footer vn-care*/
-
-/*begin panel*/
-section.vn-care.content .panel.panel-default {
-    background: white;
-    border-radius: 0;
-    border-color: #ececec;
-    /*margin-bottom: 15px;*/
-}
-
-section.vn-care.content .panel.panel-default .panel-heading {
-    background: white;
-    height: 60px;
-    padding: 17px 14px;
-
-}
-
-section.vn-care.content .panel.panel-default .panel-heading  .panel-title{
-    font-size: 2rem;
-    font-weight:600;
-    color: #444;
-}
-
-section.vn-care.content .panel.panel-default .panel-heading  .panel-title i.fa{
-    color: #e96969;
-}
-
-section.vn-care.content .panel.panel-default .panel-heading .panel-heading-button button{
-    position: relative;
-    top: -5px;
-    float: right;
-}
-
-/*end panel*/
-
-/*begin video box*/
-.video-box .description {
-    padding: 0 5px 0 5px;
-    border: 1px solid #ececec;
-    margin-bottom: 10px;
-}
-
-.video-box .description .post-status{
-    min-height:1.5em;
-}
-
-.video-box .description .post-status .pull-right {
-    color: #aaaaaa !important;
-    font-size: 11px;
-    margin: 0 4px;
-}
-
-.video-box .description a{
-    text-decoration: none;
-}
-
-.video-box .description h6 {
-    color: #444444 !important;
-    font-size: 13px;
-    font-weight: 600;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-bottom: 4px;
-}
-
-.video-box .thumb .video-status  .label-default {
-    background-color: rgba(0, 0, 0, 0.69) !important;
-}
-
-.video-box .thumb .video-status {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 0 5px 5px 5px;
-}
-
-.video-box .thumb a.play span {
-    color: white;
-    font-size: 24px;
-    position: relative;
-    top: 65px;
-}
-
-.video-box .thumb a.play {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    text-align: center;
-    text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.72);
-}
-
-.video-box .thumb img.img-responsive {
-    height: 190px;
-    width: 100%;
-}
-
-.video-box .thumb {
-    position: relative;
-    overflow: hidden;
-}
-
-
-.video-box-float-left {
-    min-height:218px;
-}
-
-.video-box-float-left .description .post-status .pull-right{
-    float: left !important;
-}
-
-.video-box .description .detail, .video-box .description .detail a {
-    color: #444444 !important;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: justify;
-}
-
-.video-box .description .detail {
-    margin-bottom: 5px;
-}
-
-@media (min-width: 768px) {
-    .video-box-float-left .thumb {
-        float: left;
-        width: 30%;
-        margin-right:10px;
-    }
-
-    .video-box-float-left .description{
-        min-height:218px;
-        border: none;
-    }
-}
-
-/*end video box*/
-
-@media (min-width: 992px) {
-    .video-view .row {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .video-view .row > [class*='col-'] {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-/* Top bar */
-.top-bar{
-    background-color: #555555;
-    padding: 6px 0 6px 0;
-    min-height: 36px;
-}
-
-.top-bar .dropdown .username {
-    color: white;
-}
 a,
 button {
     -webkit-transition: all 0.2s ease-out;
@@ -733,9 +483,9 @@ h1 {
 }
 #content .product .flip-container {
     cursor: pointer;
-    -webkit-perspective: 1000px;
-    -moz-perspective: 1000px;
-    perspective: 1000px;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    perspective: 1000;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
@@ -1927,3 +1677,4 @@ address {
     color: #fff;
     text-decoration: none;
 }
+
