--- a/client/ui/layouts/partials/Footer.html
+++ b/client/ui/layouts/partials/Footer.html
@@ -69,11 +69,10 @@
                         <h4>Where to find us</h4>
 
                         <p><strong>HCMUS</strong>
-                            <br>227
-                            <br>Nguyen Van Cu
+                            <br>227 Nguyen Van Cu
+                            <br>Ho Chi Minh City
                             <br>VietNam
                             <br>
-                            <strong>Great Britain</strong>
                         </p>
 
                         <a href="contact.html">Go to contact page</a>
