--- a/client/ui/layouts/partials/Header.html
+++ b/client/ui/layouts/partials/Header.html
@@ -217,15 +217,15 @@
                                             <div class="col-sm-3">
                                                 <h5>Order process</h5>
                                                 <ul>
-                                                    <li><a href="basket.html">Shopping cart</a>
+                                                    <li><a href={{pathFor 'ShoppingCart'}}>Shopping cart</a>
                                                     </li>
-                                                    <li><a href="checkout1.html">Checkout - step 1</a>
+                                                    <li><a href={{pathFor 'Checkout1'}}>Checkout - step 1</a>
                                                     </li>
-                                                    <li><a href="checkout2.html">Checkout - step 2</a>
+                                                    <li><a href={{pathFor 'Checkout2'}}>Checkout - step 2</a>
                                                     </li>
-                                                    <li><a href="checkout3.html">Checkout - step 3</a>
+                                                    <li><a href={{pathFor 'Checkout3'}}>Checkout - step 3</a>
                                                     </li>
-                                                    <li><a href="checkout4.html">Checkout - step 4</a>
+                                                    <li><a href={{pathFor 'Checkout4'}}>Checkout - step 4</a>
                                                     </li>
                                                 </ul>
                                             </div>
