--- a/client/ui/layouts/shoppingcart/shoppingcart.html
+++ b/client/ui/layouts/shoppingcart/shoppingcart.html
@@ -95,13 +95,13 @@
 
                 <div class="row same-height-row">
                     <div class="col-md-3 col-sm-6">
-                        <div class="box same-height" style="height: 574px;">
+                        <div class="box same-height">
                             <h3>You may also like these products</h3>
                         </div>
                     </div>
 
                     <div class="col-md-3 col-sm-6">
-                        <div class="product same-height" style="height: 574px;">
+                        <div class="product same-height">
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-6">
-                        <div class="product same-height" style="height: 574px;">
+                        <div class="product same-height">
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
@@ -156,7 +156,7 @@
 
 
                     <div class="col-md-3 col-sm-6">
-                        <div class="product same-height" style="height: 574px;">
+                        <div class="product same-height">
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
